--- a/data/cards/81380218.yaml
+++ b/data/cards/81380218.yaml
@@ -38,10 +38,10 @@ property: Field
 images:
 - index: 1
   image: ChorusofSanctuary-BE01-JP-C.png
-  illustration: ChorusofSanctuary-TF04-JP-VG.jpg
+  illustration: ChorusofSanctuary-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: ChorusofSanctuary-SRL-EN-C-UE-25thAnniversaryEdition.png
-  illustration: ChorusofSanctuary-TF04-EN-VG.jpg
+  illustration: ChorusofSanctuary-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DB1-EN022
