--- a/data/cards/87796900.yaml
+++ b/data/cards/87796900.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Drago Alato #1'
   pt: Dragão Alado, Guardião da Fortaleza No1
   ja: <ruby>砦<rt>とりで</rt></ruby>を<ruby>守<rt>まも</rt></ruby>る<ruby>翼<rt>よく</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>
-  ja_romaji: Toride wo Mamoru Yokuryū
+  ja_romaji: Toride o Mamoru Yokuryū
   ko: 요새를 지키는 익룡
   ko_rr:
   zh-TW:
