--- a/data/cards/yugipedia979100.yaml
+++ b/data/cards/yugipedia979100.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: ホルスの栄光－イムセティ
-  ja_romaji:
+  ja: ホルスの<ruby>栄<rt>えい</rt></ruby><ruby>光<rt>こう</rt></ruby>－イムセティ
+  ja_romaji: Horusu no Eikō - Imuseti
   ko:
   ko_rr:
   zh-TW:
