--- a/data/cards/yugipedia979101.yaml
+++ b/data/cards/yugipedia979101.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: ホルスの祝福－ドゥアムテフ
-  ja_romaji:
+  ja: ホルスの<ruby>祝<rt>しゅく</rt></ruby><ruby>福<rt>ふく</rt></ruby>－ドゥアムテフ
+  ja_romaji: Horusu no Shukufuku - Duamutefu
   ko:
   ko_rr:
   zh-TW:
