--- a/data/cards/yugipedia979105.yaml
+++ b/data/cards/yugipedia979105.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: カノプスの守護者
-  ja_romaji:
+  ja: カノプスの<ruby>守<rt>しゅ</rt></ruby><ruby>護<rt>ご</rt></ruby><ruby>者<rt>しゃ</rt></ruby>
+  ja_romaji: Kanopusu no Shugosha
   ko:
   ko_rr:
   zh-TW:
