--- a/data/cards/yugipedia978645.yaml
+++ b/data/cards/yugipedia978645.yaml
@@ -32,7 +32,7 @@ attribute: LIGHT
 level: 6
 atk: 2300
 def: 1300
-materials: 1 Tuner + 1+ non-Tuner monsters
+materials: 1 Tuner + 1 or more non-Tuner monsters
 series:
 - Mannadium
 images:
