--- a/data/cards/yugipedia979103.yaml
+++ b/data/cards/yugipedia979103.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: ホルスの加護－ケベンセヌフ
-  ja_romaji:
+  ja: ホルスの<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>－ケベンセヌフ
+  ja_romaji: Horusu no Kago - Kebensenufu
   ko:
   ko_rr:
   zh-TW:
