--- a/data/cards/yugipedia979104.yaml
+++ b/data/cards/yugipedia979104.yaml
@@ -7,15 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja: 王の棺
-  ja_romaji:
+  ja: <ruby>王<rt>おう</rt></ruby>の<ruby>棺<rt>ひつぎ</rt></ruby>
+  ja_romaji: Ō no Hitsugi
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    "Horus" monsters you control cannot be destroyed by card effects that do not target them. You can send 1 card from your hand to the GY; send 1 "Horus" monster from your Deck to the GY. You can only use this effect of "Pharaonic Sarcophagus" up to four times per turn. Once per turn, at the start of the Damage Step, if your "Horus" monster battles an opponent's monster: You can send that opponent's monster to the GY.
+    "Horus" monsters you control cannot be destroyed by card effects, unless they target them. You can send 1 card from your hand to the GY; send 1 "Horus" monster from your Deck to the GY. You can only use this effect of "Pharaonic Sarcophagus" up to four times per turn. Once per turn, at the start of the Damage Step, if your "Horus" monster battles an opponent's monster: You can send that opponent's monster to the GY.
   de:
   es:
   fr:
