--- a/data/cards/33365932.yaml
+++ b/data/cards/33365932.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: BLMR-EN053
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   - set_number: DT06-EN051
     set_name: Duel Terminal 6b
     rarities:
@@ -93,6 +97,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: BLMR-DE053
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: FOTB-FR009
     set_name: Force of the Breaker
@@ -115,6 +123,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: BLMR-FR053
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: FOTB-IT009
     set_name: Force of the Breaker
@@ -137,6 +149,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: BLMR-IT053
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SDSB-PT021
     set_name: 'Structure Deck: Soulburner'
@@ -150,6 +166,10 @@ sets:
     set_name: Speed Duel Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: BLMR-PT053
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: FOTB-JP009
     set_name: Force of the Breaker
