--- a/data/cards/10158145.yaml
+++ b/data/cards/10158145.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLMR-EN057
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: FLOD-DE017
     set_name: Flames of Destruction
@@ -63,6 +67,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLMR-DE057
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: FLOD-FR017
     set_name: Flames of Destruction
@@ -72,6 +80,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLMR-FR057
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: FLOD-IT017
     set_name: Flames of Destruction
@@ -81,6 +93,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLMR-IT057
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: FLOD-PT017
     set_name: Flames of Destruction
@@ -90,6 +106,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Ultra Rare
+  - set_number: BLMR-PT057
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: FLOD-JP017
     set_name: Flames of Destruction
