--- a/data/cards/16889337.yaml
+++ b/data/cards/16889337.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-EN055
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SHSP-DE035
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-DE055
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SHSP-FR035
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-FR055
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SHSP-IT035
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-IT055
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SHSP-PT035
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-PT055
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SHSP-JP035
     set_name: Shadow Specters
