--- a/data/cards/27182739.yaml
+++ b/data/cards/27182739.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: BLMR-EN060
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: MYFI-DE001
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: BLMR-DE060
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MYFI-FR001
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: BLMR-FR060
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MYFI-IT001
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: BLMR-IT060
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: MYFI-PT001
     set_name: Mystic Fighters
     rarities:
     - Super Rare
+  - set_number: BLMR-PT060
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBMF-JP001
     set_name: 'Deck Build Pack: Mystic Fighters'
