--- a/data/cards/43147039.yaml
+++ b/data/cards/43147039.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Common
+  - set_number: BLMR-EN058
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED3-DE035
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -71,6 +75,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Common
+  - set_number: BLMR-DE058
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LED3-FR035
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -80,6 +88,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Common
+  - set_number: BLMR-FR058
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED3-IT035
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -89,6 +101,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Common
+  - set_number: BLMR-IT058
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED3-PT035
     set_name: 'Legendary Duelists: White Dragon Abyss'
@@ -98,6 +114,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Common
+  - set_number: BLMR-PT058
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP20-JP035
     set_name: 'Duelist Pack: Legend Duelist 3'
