--- a/data/cards/65192027.yaml
+++ b/data/cards/65192027.yaml
@@ -93,6 +93,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: BLMR-EN054
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: PTDN-DE019
     set_name: Phantom Darkness
@@ -138,6 +143,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: BLMR-DE054
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: PTDN-FR019
     set_name: Phantom Darkness
@@ -183,6 +193,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: BLMR-FR054
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: PTDN-IT019
     set_name: Phantom Darkness
@@ -228,6 +243,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: BLMR-IT054
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: PGLD-PT064
     set_name: Premium Gold
@@ -253,6 +273,11 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: BLMR-PT054
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PTDN-JP019
     set_name: Phantom Darkness
