--- a/data/cards/70711847.yaml
+++ b/data/cards/70711847.yaml
@@ -58,6 +58,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLMR-EN059
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: CYHO-DE083
     set_name: Cybernetic Horizon
@@ -71,6 +75,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLMR-DE059
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: CYHO-FR083
     set_name: Cybernetic Horizon
@@ -84,6 +92,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLMR-FR059
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: CYHO-IT083
     set_name: Cybernetic Horizon
@@ -97,6 +109,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLMR-IT059
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: CYHO-PT083
     set_name: Cybernetic Horizon
@@ -110,6 +126,10 @@ sets:
     set_name: 'Maximum Gold: El Dorado'
     rarities:
     - Premium Gold Rare
+  - set_number: BLMR-PT059
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: EP19-JP022
     set_name: Extra Pack 2019
