--- a/data/cards/78080961.yaml
+++ b/data/cards/78080961.yaml
@@ -54,26 +54,67 @@ sets:
     set_name: OTS Tournament Pack 5
     rarities:
     - Super Rare
+  - set_number: BLMR-EN056
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: TDIL-DE087
     set_name: The Dark Illusion
     rarities:
     - Rare
+  - set_number: OP05-DE006
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
+  - set_number: BLMR-DE056
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: TDIL-FR087
     set_name: The Dark Illusion
     rarities:
     - Rare
+  - set_number: OP05-FR006
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
+  - set_number: BLMR-FR056
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: TDIL-IT087
     set_name: The Dark Illusion
     rarities:
     - Rare
+  - set_number: OP05-IT006
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
+  - set_number: BLMR-IT056
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: TDIL-PT087
     set_name: The Dark Illusion
     rarities:
     - Rare
+  - set_number: OP05-PT006
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Super Rare
+  - set_number: BLMR-PT056
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: EP17-JP020
     set_name: Extra Pack 2017
