--- a/data/cards/26435595.yaml
+++ b/data/cards/26435595.yaml
@@ -70,6 +70,8 @@ pendulum_effect:
   zh-CN: |-
     此卡名的灵摆效果１回合仅可使用１次。①：另一方自己的灵摆区域没有卡存在的情况下可以发动。从自己的额外牌组挑选１只表侧表示灵摆怪兽，放在自己的灵摆区域。
 materials: 2 Pendulum Monsters
+series:
+- Patissciel
 images:
 - index: 1
   image: PatisscielCouverture-DIFO-EN-SR-1E.png
