--- a/data/cards/yugipedia980577.yaml
+++ b/data/cards/yugipedia980577.yaml
@@ -7,7 +7,7 @@ name:
   fr:
   it:
   pt:
-  ja:
+  ja: <ruby>Ｃｏｎｃｏｕｒｓ ｄｅ Ｃｕｉｓｉｎｅ<rt>コンクール・ド・キュイジーヌ</rt></ruby>～菓冷なる料理対決～
   ja_romaji:
   ko:
   ko_rr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Special Summon 1 "Nouvelles" Pendulum Monster and 1 "Patissciel" Pendulum Monster from your hand, Deck, and/or Extra Deck, 1 on each field, also you cannot use monsters as material for a Fusion, Synchro, Xyz, or Link Summon for the rest of this turn, except "Nouvelles" and "Pastissciel" monsters. During your Main Phase: You can banish this card from your GY, then target 1 face-up monster on the field; it gains 200 ATK for each "Recipe" card in the GYs. You can only use each effect of "Concours de Cuisine (Confectionery Contest)" once per turn.
+    Special Summon both 1 "Nouvelles" Pendulum Monster and 1 "Patissciel" Pendulum Monster from your hand, Deck, and/or Extra Deck, 1 on each field, also you cannot use monsters as material for a Fusion, Synchro, Xyz, or Link Summon for the rest of this turn, except "Nouvelles" and "Patissciel" monsters. During your Main Phase: You can banish this card from your GY, then target 1 face-up monster on the field; it gains 200 ATK for each "Recipe" card in the GYs. You can only use each effect of "Concours de Cuisine (Confectionery Contest)" once per turn.
   de:
   es:
   fr:
@@ -29,7 +29,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: ConcoursdeCuisineConfectioneryContest-AGOV-JP-OP.png
+  image: ConcoursdeCuisine(ConfectioneryContest)-AGOV-JP-OP.png
 sets:
   ja:
   - set_number: AGOV-JP064
