--- a/rush.yaml
+++ b/rush.yaml
@@ -36440,7 +36440,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. If you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
+    This card gains 300 ATK until the end of this turn. Then, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -103012,3 +103012,72 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 978989
+---
+konami_id:
+name:
+  en: Harpie Lady 2
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Harpie Lady" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Until the end of your opponent's next turn, this card's name becomes "Harpie Lady", and your opponent cannot activate Trap Cards when this card declares an attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 4
+atk: 1300
+def: 1400
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieLady2-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP005
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 980617
