--- a/data/cards/yugipedia980590.yaml
+++ b/data/cards/yugipedia980590.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>裏螺旋流雪風<rt>スノーデビル</rt></ruby>
-  ja_romaji:
+  ja_romaji: Vankisshu Souru Sunō Debiru
   ko:
   ko_rr:
   zh-TW:
