--- a/data/cards/06609736.yaml
+++ b/data/cards/06609736.yaml
@@ -50,9 +50,17 @@ sets:
     set_name: Dimension Force
     rarities:
     - Ultra Rare
+  - set_number: BLMR-EN066
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DIFO-DE022
     set_name: Dimension Force
+    rarities:
+    - Ultra Rare
+  - set_number: BLMR-DE066
+    set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
   fr:
@@ -60,14 +68,26 @@ sets:
     set_name: Dimension Force
     rarities:
     - Ultra Rare
+  - set_number: BLMR-FR066
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DIFO-IT022
     set_name: Dimension Force
     rarities:
     - Ultra Rare
+  - set_number: BLMR-IT066
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DIFO-PT022
     set_name: Dimension Force
+    rarities:
+    - Ultra Rare
+  - set_number: BLMR-PT066
+    set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
   ja:
