--- a/data/cards/13735899.yaml
+++ b/data/cards/13735899.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: Lightning Overdrive
     rarities:
     - Ultra Rare
+  - set_number: BLMR-EN071
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: LIOV-DE034
     set_name: Lightning Overdrive
     rarities:
     - Ultra Rare
+  - set_number: BLMR-DE071
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: LIOV-FR034
     set_name: Lightning Overdrive
     rarities:
     - Ultra Rare
+  - set_number: BLMR-FR071
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: LIOV-IT034
     set_name: Lightning Overdrive
     rarities:
     - Ultra Rare
+  - set_number: BLMR-IT071
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: LIOV-PT034
     set_name: Lightning Overdrive
     rarities:
     - Ultra Rare
+  - set_number: BLMR-PT071
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: LIOV-JP034
     set_name: Lightning Overdrive
