--- a/data/cards/18313046.yaml
+++ b/data/cards/18313046.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN072
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE007
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE072
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR007
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR072
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT007
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT072
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT007
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT072
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP007
     set_name: 'Deck Build Pack: Grand Creators'
