--- a/data/cards/19535693.yaml
+++ b/data/cards/19535693.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: BLMR-EN062
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE004
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: BLMR-DE062
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR004
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: BLMR-FR062
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT004
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: BLMR-IT062
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT004
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: BLMR-PT062
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP004
     set_name: 'Deck Build Pack: Grand Creators'
