--- a/data/cards/42810973.yaml
+++ b/data/cards/42810973.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLMR-EN073
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: DP09-DE016
     set_name: 'Duelist Pack: Yusei 2'
@@ -73,6 +77,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLMR-DE073
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: DP09-FR016
     set_name: 'Duelist Pack: Yusei 2'
@@ -82,6 +90,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLMR-FR073
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: DP09-IT016
     set_name: 'Duelist Pack: Yusei 2'
@@ -91,11 +103,19 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLMR-IT073
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: LC5D-PT037
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLMR-PT073
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DP09-JP016
     set_name: 'Duelist Pack: Yusei 2'
