--- a/data/cards/67972302.yaml
+++ b/data/cards/67972302.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: BLMR-EN070
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CYAC-DE027
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: BLMR-DE070
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CYAC-FR027
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: BLMR-FR070
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CYAC-IT027
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: BLMR-IT070
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CYAC-PT027
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: BLMR-PT070
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CYAC-JP027
     set_name: Cyberstorm Access
