--- a/data/cards/97403510.yaml
+++ b/data/cards/97403510.yaml
@@ -65,6 +65,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: BLMR-EN077
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: CBLZ-DE045
     set_name: Cosmo Blazer
@@ -76,6 +80,10 @@ sets:
     set_name: Yu-Gi-Oh! Advent Calendar ZEXAL Edition
     rarities:
     - Super Rare
+  - set_number: BLMR-DE077
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: CBLZ-FR045
     set_name: Cosmo Blazer
@@ -83,6 +91,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: BLMR-FR077
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: CBLZ-IT045
     set_name: Cosmo Blazer
@@ -90,6 +102,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: BLMR-IT077
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: CBLZ-PT045
     set_name: Cosmo Blazer
@@ -97,6 +113,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: BLMR-PT077
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: CBLZ-JP045
     set_name: Cosmo Blazer
