--- a/data/cards/05041348.yaml
+++ b/data/cards/05041348.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLMR-EN074
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: CHIM-DE035
     set_name: Chaos Impact
@@ -72,6 +76,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLMR-DE074
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: CHIM-FR035
     set_name: Chaos Impact
@@ -81,6 +89,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLMR-FR074
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: CHIM-IT035
     set_name: Chaos Impact
@@ -90,6 +102,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLMR-IT074
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: CHIM-PT035
     set_name: Chaos Impact
@@ -99,6 +115,10 @@ sets:
     set_name: 2020 Tin of Lost Memories
     rarities:
     - Prismatic Secret Rare
+  - set_number: BLMR-PT074
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: CHIM-JP035
     set_name: Chaos Impact
