--- a/data/cards/13258285.yaml
+++ b/data/cards/13258285.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN061
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE001
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE061
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR001
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR061
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT001
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT061
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT001
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT061
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP001
     set_name: 'Deck Build Pack: Grand Creators'
