--- a/data/cards/30680659.yaml
+++ b/data/cards/30680659.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-EN065
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: GRCR-DE026
     set_name: The Grand Creators
@@ -65,6 +69,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-DE065
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: GRCR-FR026
     set_name: The Grand Creators
@@ -75,6 +83,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-FR065
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GRCR-IT026
     set_name: The Grand Creators
@@ -85,6 +97,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-IT065
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: GRCR-PT026
     set_name: The Grand Creators
@@ -95,6 +111,10 @@ sets:
     set_name: OTS Tournament Pack 19
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-PT065
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DBGC-JP026
     set_name: 'Deck Build Pack: Grand Creators'
