--- a/data/cards/37164373.yaml
+++ b/data/cards/37164373.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Rare
+  - set_number: BLMR-EN076
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: ABYR-DE048
     set_name: Abyss Rising
@@ -85,6 +89,10 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Rare
+  - set_number: BLMR-DE076
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: ABYR-FR048
     set_name: Abyss Rising
@@ -99,6 +107,10 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Rare
+  - set_number: BLMR-FR076
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: ABYR-IT048
     set_name: Abyss Rising
@@ -113,6 +125,10 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Rare
+  - set_number: BLMR-IT076
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: AP06-PT022
     set_name: Astral Pack Six
@@ -122,6 +138,10 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Rare
+  - set_number: BLMR-PT076
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: ABYR-JP048
     set_name: Abyss Rising
