--- a/data/cards/44708154.yaml
+++ b/data/cards/44708154.yaml
@@ -61,30 +61,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-EN075
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: GRCR-DE008
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-DE075
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: GRCR-FR008
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-FR075
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GRCR-IT008
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-IT075
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: GRCR-PT008
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-PT075
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DBGC-JP008
     set_name: 'Deck Build Pack: Grand Creators'
