--- a/data/cards/81914447.yaml
+++ b/data/cards/81914447.yaml
@@ -51,30 +51,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-EN064
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: GRCR-DE006
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-DE064
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: GRCR-FR006
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-FR064
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: GRCR-IT006
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-IT064
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: GRCR-PT006
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-PT064
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: DBGC-JP006
     set_name: 'Deck Build Pack: Grand Creators'
