--- a/data/cards/03285551.yaml
+++ b/data/cards/03285551.yaml
@@ -47,30 +47,55 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-EN093
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: GRCR-DE025
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-DE093
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: GRCR-FR025
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-FR093
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: GRCR-IT025
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-IT093
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: GRCR-PT025
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: BLMR-PT093
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DBGC-JP025
     set_name: 'Deck Build Pack: Grand Creators'
