--- a/data/cards/32731036.yaml
+++ b/data/cards/32731036.yaml
@@ -52,26 +52,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
+  - set_number: BLMR-EN103
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: DABL-DE009
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
+  - set_number: BLMR-DE103
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: DABL-FR009
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
+  - set_number: BLMR-FR103
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: DABL-IT009
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
+  - set_number: BLMR-IT103
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: DABL-PT009
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
+  - set_number: BLMR-PT103
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: DABL-JP009
     set_name: Darkwing Blast
