--- a/data/cards/48130397.yaml
+++ b/data/cards/48130397.yaml
@@ -87,6 +87,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-EN089
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: PTDN-DE046
     set_name: Phantom Darkness
@@ -133,6 +137,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-DE089
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: PTDN-FR046
     set_name: Phantom Darkness
@@ -174,6 +182,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+    - Secret Rare
+  - set_number: BLMR-FR089
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
     - Secret Rare
   it:
   - set_number: PTDN-IT046
@@ -221,6 +233,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-IT089
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: SDCR-PT021
     set_name: Cyber Dragon Revolution Structure Deck
@@ -254,6 +270,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+    - Secret Rare
+  - set_number: BLMR-PT089
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
     - Secret Rare
   ja:
   - set_number: PTDN-JP046
