--- a/data/cards/53129443.yaml
+++ b/data/cards/53129443.yaml
@@ -131,6 +131,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Super Rare
+  - set_number: BLMR-EN086
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   - set_number: LOB-052
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -304,6 +308,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Super Rare
+  - set_number: BLMR-DE086
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: LDD-F041
     set_name: Legend of Blue Eyes White Dragon
@@ -413,6 +421,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Super Rare
+  - set_number: BLMR-FR086
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: LDD-I041
     set_name: Legend of Blue Eyes White Dragon
@@ -522,6 +534,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Super Rare
+  - set_number: BLMR-IT086
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: LDB-P052
     set_name: Legend of Blue Eyes White Dragon
@@ -603,6 +619,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Super Rare
+  - set_number: BLMR-PT086
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: ''
     set_name: Vol.1
