--- a/data/cards/81497285.yaml
+++ b/data/cards/81497285.yaml
@@ -54,30 +54,50 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: BLMR-EN104
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: DABL-DE030
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: BLMR-DE104
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: DABL-FR030
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: BLMR-FR104
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: DABL-IT030
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: BLMR-IT104
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: DABL-PT030
     set_name: Darkwing Blast
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: BLMR-PT104
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: DABL-JP030
     set_name: Darkwing Blast
