--- a/data/cards/01249315.yaml
+++ b/data/cards/01249315.yaml
@@ -59,26 +59,46 @@ sets:
     set_name: Judgment of the Light
     rarities:
     - Super Rare
+  - set_number: BLMR-EN078
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: JOTL-DE058
     set_name: Judgment of the Light
     rarities:
     - Super Rare
+  - set_number: BLMR-DE078
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: JOTL-FR058
     set_name: Judgment of the Light
     rarities:
     - Super Rare
+  - set_number: BLMR-FR078
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: JOTL-IT058
     set_name: Judgment of the Light
     rarities:
     - Super Rare
+  - set_number: BLMR-IT078
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: JOTL-PT058
     set_name: Judgment of the Light
     rarities:
     - Super Rare
+  - set_number: BLMR-PT078
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: JOTL-JP058
     set_name: Judgment of the Light
