--- a/data/cards/03790062.yaml
+++ b/data/cards/03790062.yaml
@@ -62,26 +62,46 @@ sets:
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-EN079
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: SHSP-DE047
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-DE079
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: SHSP-FR047
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-FR079
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SHSP-IT047
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-IT079
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SHSP-PT047
     set_name: Shadow Specters
     rarities:
     - Rare
+  - set_number: BLMR-PT079
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: SHSP-JP047
     set_name: Shadow Specters
