--- a/data/cards/05380979.yaml
+++ b/data/cards/05380979.yaml
@@ -47,26 +47,51 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: BLMR-EN102
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: TAMA-DE023
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: BLMR-DE102
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: TAMA-FR023
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: BLMR-FR102
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: TAMA-IT023
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: BLMR-IT102
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: TAMA-PT023
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: BLMR-PT102
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DBTM-JP023
     set_name: 'Deck Build Pack: Tactical Masters'
