--- a/data/cards/14025912.yaml
+++ b/data/cards/14025912.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Mystic Fighters
     rarities:
     - Secret Rare
+  - set_number: BLMR-EN092
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: MYFI-DE010
     set_name: Mystic Fighters
     rarities:
     - Secret Rare
+  - set_number: BLMR-DE092
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MYFI-FR010
     set_name: Mystic Fighters
     rarities:
     - Secret Rare
+  - set_number: BLMR-FR092
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: MYFI-IT010
     set_name: Mystic Fighters
     rarities:
     - Secret Rare
+  - set_number: BLMR-IT092
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: MYFI-PT010
     set_name: Mystic Fighters
     rarities:
     - Secret Rare
+  - set_number: BLMR-PT092
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBMF-JP010
     set_name: 'Deck Build Pack: Mystic Fighters'
