--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -63,30 +63,55 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLMR-EN083
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: CROS-DE050
     set_name: Crossed Souls
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLMR-DE083
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: CROS-FR050
     set_name: Crossed Souls
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLMR-FR083
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: CROS-IT050
     set_name: Crossed Souls
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLMR-IT083
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: CROS-PT050
     set_name: Crossed Souls
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: BLMR-PT083
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: CROS-JP050
     set_name: Crossed Souls
