--- a/data/cards/27623932.yaml
+++ b/data/cards/27623932.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN101
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE035
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE101
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR035
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR101
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT035
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT101
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT035
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT101
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP035
     set_name: 'Deck Build Pack: Grand Creators'
