--- a/data/cards/30241314.yaml
+++ b/data/cards/30241314.yaml
@@ -66,6 +66,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-EN100
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN237
     set_name: Dark Revelation Volume 4
     rarities:
@@ -96,6 +100,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-DE100
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EOJ-FR057
     set_name: Enemy of Justice
@@ -114,6 +122,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-FR100
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: EOJ-IT057
     set_name: Enemy of Justice
@@ -136,12 +148,20 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-IT100
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SGX3-PTF19
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
     - Secret Rare
+  - set_number: BLMR-PT100
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EOJ-JP057
     set_name: Enemy of Justice
