--- a/data/cards/34690953.yaml
+++ b/data/cards/34690953.yaml
@@ -48,26 +48,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: BLMR-EN099
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE067
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: BLMR-DE099
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR067
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: BLMR-FR099
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT067
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: BLMR-IT099
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT067
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: BLMR-PT099
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DABL-JP067
     set_name: Darkwing Blast
