--- a/data/cards/35480699.yaml
+++ b/data/cards/35480699.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: BLMR-EN090
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   de:
   - set_number: TDGS-DE062
     set_name: The Duelist Genesis
@@ -93,6 +97,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: BLMR-DE090
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   fr:
   - set_number: TDGS-FR062
     set_name: The Duelist Genesis
@@ -119,6 +127,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: BLMR-FR090
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   it:
   - set_number: TDGS-IT062
     set_name: The Duelist Genesis
@@ -145,6 +157,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: BLMR-IT090
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   pt:
   - set_number: BP03-PT159
     set_name: 'Battle Pack 3: Monster League'
@@ -167,6 +183,10 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: BLMR-PT090
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
   ja:
   - set_number: TDGS-JP062
     set_name: The Duelist Genesis
