--- a/data/cards/63166095.yaml
+++ b/data/cards/63166095.yaml
@@ -62,6 +62,11 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLMR-EN091
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: DASA-DE030
     set_name: Dark Saviors
@@ -79,6 +84,11 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLMR-DE091
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: DASA-FR030
     set_name: Dark Saviors
@@ -96,6 +106,11 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLMR-FR091
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: DASA-IT030
     set_name: Dark Saviors
@@ -113,6 +128,11 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLMR-IT091
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: DASA-PT030
     set_name: Dark Saviors
@@ -130,6 +150,11 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: BLMR-PT091
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DBDS-JP030
     set_name: 'Deck Build Pack: Dark Savers'
