--- a/data/cards/64230128.yaml
+++ b/data/cards/64230128.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN096
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE033
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE096
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR033
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR096
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT033
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT096
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT033
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT096
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP033
     set_name: 'Deck Build Pack: Grand Creators'
