--- a/data/cards/65952776.yaml
+++ b/data/cards/65952776.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN094
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE030
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE094
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR030
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR094
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT030
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT094
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT030
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT094
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP030
     set_name: 'Deck Build Pack: Grand Creators'
