--- a/data/cards/75253697.yaml
+++ b/data/cards/75253697.yaml
@@ -47,8 +47,32 @@ images:
   image: Number72ShogiRook-YZ05-EN-UR-LE.png
 sets:
   en:
+  - set_number: BLMR-EN080
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   - set_number: YZ05-EN001
     set_name: Yu-Gi-Oh! ZEXAL Volume 5 promotional card
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: BLMR-DE080
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: BLMR-FR080
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: BLMR-IT080
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: BLMR-PT080
+    set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
   ja:
