--- a/data/cards/81674782.yaml
+++ b/data/cards/81674782.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: BLMR-EN088
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN227
     set_name: Dark Revelation Volume 4
     rarities:
@@ -93,6 +97,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: BLMR-DE088
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EOJ-FR047
     set_name: Enemy of Justice
@@ -112,6 +120,10 @@ sets:
     - Secret Rare
   - set_number: DUSA-FR060
     set_name: Duelist Saga
+    rarities:
+    - Ultra Rare
+  - set_number: BLMR-FR088
+    set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
   it:
@@ -139,9 +151,17 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: BLMR-IT088
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DUSA-PT060
     set_name: Duelist Saga
+    rarities:
+    - Ultra Rare
+  - set_number: BLMR-PT088
+    set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
   ja:
