--- a/data/cards/83531441.yaml
+++ b/data/cards/83531441.yaml
@@ -73,6 +73,11 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLMR-EN081
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: DUEA-DE085
     set_name: Duelist Alliance
@@ -90,6 +95,11 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLMR-DE081
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: DUEA-FR085
     set_name: Duelist Alliance
@@ -107,6 +117,11 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLMR-FR081
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: DUEA-IT085
     set_name: Duelist Alliance
@@ -124,6 +139,11 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLMR-IT081
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: DUEA-PT085
     set_name: Duelist Alliance
@@ -141,6 +161,11 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLMR-PT081
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: EP15-JP015
     set_name: Extra Pack 2015
