--- a/data/cards/90448279.yaml
+++ b/data/cards/90448279.yaml
@@ -67,6 +67,11 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-EN084
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: PHRA-DE045
     set_name: Phantom Rage
@@ -81,6 +86,11 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-DE084
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: PHRA-FR045
     set_name: Phantom Rage
@@ -95,6 +105,11 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-FR084
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: PHRA-IT045
     set_name: Phantom Rage
@@ -109,6 +124,11 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-IT084
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: PHRA-PT045
     set_name: Phantom Rage
@@ -123,6 +143,11 @@ sets:
     set_name: OTS Tournament Pack 18
     rarities:
     - Ultimate Rare
+  - set_number: BLMR-PT084
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: PHRA-JP045
     set_name: Phantom Rage
