--- a/data/cards/91228233.yaml
+++ b/data/cards/91228233.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN097
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE034
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE097
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR034
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR097
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT034
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT097
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT034
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT097
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP034
     set_name: 'Deck Build Pack: Grand Creators'
