--- a/data/cards/92341815.yaml
+++ b/data/cards/92341815.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-EN095
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE031
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-DE095
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR031
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-FR095
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT031
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-IT095
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT031
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: BLMR-PT095
+    set_name: 'Battles of Legend: Monstrous Revenge'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP031
     set_name: 'Deck Build Pack: Grand Creators'
