--- a/rush.yaml
+++ b/rush.yaml
@@ -102420,14 +102420,29 @@ name:
   ko_rr:
   zh-TW:
   zh-CN:
-text:
-  en:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 2 cards of your opponent's Deck to the Graveyard. Then, if your opponent has 5 or more Spell/Trap Cards in their Graveyard, you can add 1 Equip Spell Card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手のデッキの上からカード２枚を墓地へ送る。その後、相手の墓地の魔法・罠カードが５枚以上の場合、自分の墓地の装備魔法カード１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
