--- a/data/cards/70711847.yaml
+++ b/data/cards/70711847.yaml
@@ -135,6 +135,9 @@ sets:
     set_name: Extra Pack 2019
     rarities:
     - Super Rare
+  - set_number: SD46-JP022
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: EP19-KR022
     set_name: Extra Pack 2019
