--- a/data/cards/74644400.yaml
+++ b/data/cards/74644400.yaml
@@ -73,6 +73,9 @@ sets:
     set_name: Dark Neostorm
     rarities:
     - Rare
+  - set_number: SD46-JP019
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: DANE-KR010
     set_name: Dark Neostorm
