--- a/data/cards/16209941.yaml
+++ b/data/cards/16209941.yaml
@@ -115,6 +115,9 @@ sets:
     set_name: Extra Pack 2019
     rarities:
     - Super Rare
+  - set_number: SD46-JP023
+    set_name: 'Structure Deck: Pulse of the King'
+    rarities:
   ko:
   - set_number: EP19-KR023
     set_name: Extra Pack 2019
