--- a/data/cards/61538782.yaml
+++ b/data/cards/61538782.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Cuando esta carta destruye un monstruo de tu adversario en batalla y lo manda al Cementerio: equipa el monstruo destruido a esta carta. Esta carta gana ATK igual al ATK combinado de los monstruos equipados a ella por este efecto.
   fr: |-
-    Lorsque cette carte détruit un monstre de votre adversaire au combat et l'envoie au Cimetière : équipez le monstre détruit à cette carte. Cette carte gagne une ATK égale à la somme des ATK des monstres équipés à elle par cet effet.
+    Lorsque cette carte détruit un monstre de l’adversaire au combat et l'envoie au Cimetière : équipez le monstre détruit à cette carte. Gagne une ATK égale à la somme des ATK des monstres qui lui sont équipés par cet effet.
   it: |-
     Quando questa carta distrugge in battaglia un mostro controllato dal tuo avversario e lo manda al Cimitero, equipaggialo a questa carta. Questa carta guadagna un ATK pari agli ATK totali dei mostri ad essa equipaggiati.
   pt: |-
