--- a/data/rush/16702.yaml
+++ b/data/rush/16702.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have a face-up "Worker Warrior - Sinister CEO" on your field.
+    You have "Worker Warrior - Sinister CEO" face-up on your field.
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up Level 7 or lower monster on your opponent's field. Then, if you destroyed a monster by this effect, you can Special Summon 1 Level 5 or lower Machine Type monster from your Graveyard to your field face-up.
+    Destroy 1 face-up Level 7 or lower monster on your opponent's field. Then, if you destroyed a monster by this effect, you can Special Summon 1 Level 5 or lower Machine Type monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
