--- a/data/cards/29765339.yaml
+++ b/data/cards/29765339.yaml
@@ -78,6 +78,10 @@ sets:
     set_name: Storm of Ragnarok
     rarities:
     - Super Rare
+  - set_number: 23TP-JP310
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: STOR-KR044
     set_name: Storm of Ragnarok
