--- a/data/cards/52105192.yaml
+++ b/data/cards/52105192.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: STP6-EN0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   de:
   - set_number: SDWS-DE021
     set_name: Warriors' Strike Structure Deck
@@ -91,6 +95,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: STP6-DR0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   fr:
   - set_number: SDWS-FR021
     set_name: Warriors' Strike Structure Deck
@@ -116,6 +124,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: STP6-FR0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   it:
   - set_number: SDWS-IT021
     set_name: Warriors' Strike Structure Deck
@@ -141,6 +153,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: STP6-IT0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   pt:
   - set_number: AP01-PT012
     set_name: Astral Pack One
@@ -158,6 +174,10 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Rare
+  - set_number: STP6-PT0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Common
   ja:
   - set_number: ADDR-JP003
     set_name: Academy Duel Disk Osiris Red promotional cards
