--- a/data/cards/76547525.yaml
+++ b/data/cards/76547525.yaml
@@ -103,6 +103,10 @@ sets:
     set_name: 'Booster SP: Highspeed Riders'
     rarities:
     - Secret Rare
+  - set_number: 23TP-JP311
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: SPHR-KR022
     set_name: 'Booster SP: Highspeed Riders'
