--- a/data/cards/00402568.yaml
+++ b/data/cards/00402568.yaml
@@ -91,6 +91,10 @@ sets:
     set_name: The Shining Darkness
     rarities:
     - Super Rare
+  - set_number: 23TP-JP304
+    set_name: Tournament Pack 2023 Vol.3
+    rarities:
+    - Common
   ko:
   - set_number: TSHD-KR025
     set_name: The Shining Darkness
