--- a/data/cards/50304345.yaml
+++ b/data/cards/50304345.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   de:
   - set_number: DP06-DE008
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -88,6 +92,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   fr:
   - set_number: DP06-FR008
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -105,6 +113,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   it:
   - set_number: DP06-IT008
     set_name: 'Duelist Pack: Jaden Yuki 3'
@@ -126,6 +138,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   pt:
   - set_number: LED5-PT019
     set_name: 'Legendary Duelists: Immortal Destiny'
@@ -139,6 +155,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP06-JP009
     set_name: 'Duelist Pack: Jaden Yuki 3'
