--- a/data/cards/94853057.yaml
+++ b/data/cards/94853057.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-EN0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN202
     set_name: Dark Revelation Volume 4
     rarities:
@@ -91,6 +95,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-DE0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EOJ-FR022
     set_name: Enemy of Justice
@@ -109,6 +117,10 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-FR0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   it:
   - set_number: EOJ-IT022
     set_name: Enemy of Justice
@@ -131,11 +143,19 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-IT0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SGX3-PTF09
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
+  - set_number: STP6-PT0??
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EOJ-JP022
     set_name: Enemy of Justice
